2013-08-19 Dario Rodriguez <dario@artica.es>

	* integria_installer,
	extras/tentacle_server,
	extras/tentacle_serverd: Prepared scripts to add tentacle_server
	to Integria.
	* include/functions_config.php,
	godmode/setup/setup_pandora.php: Added a new configuration field
	to define remote inventory path, by default /var/spool/integria/data_in
	* operation/leads/lead_detail.php: Added option "None" to field
	"Managed by" of leads.

2013-08-14 Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_graph.php,
	operation/incidents/incident_search_logic.php,
	operation/incidents/incident_graph.php,
	operation/incidents/incident_search.php: added bubble graph for
	incidents per user in the incident search.

2013-08-14 Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_inventories.php: fixed into the function
	"get_companies" when there is not a group.

2013-08-14 Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_form.php,
	operation/incidents/incident_search_logic.php: fixed PHP warnings
	and fixed lost creator in the filter of incidents.

2013-08-13 Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/side_menu.php,
	operation/user_report/user_project_timegraph.php: added the graph
	of times in each project and task for filtered user.
	
	* include/functions_user.php: added function "user_get_projects".
	
	* include/functions_graph.php: added function
	"print_project_user_timegraph" for the user project graph, and
	added common function "print_project_timegraph". Changed the
	code of function "print_project_user_timegraph" to use the previos
	new function.
	
	* include/functions_html.php: improved the source code style.

2013-08-13 Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_db.php: into the function
	"get_task_workunit_hours_user" added parameters for extract the
	workunit hours from a period.
	
	* include/js/d3.v3.js, include/functions_graph.php, index.php,