@@ -1,5 +1,14 @@
 2013-08-19 Dario Rodriguez <dario@artica.es>
 
+	* integria_installer: Modified installer script to create folders and
+	users properly.
+	* integria_dbdata.sql,
+	integria_demo.sql: Fixed several minor errors on sql scripts.
+	* godmode/setup/setup_pandora.php: Removed field to configure XML inventory
+	path. The fixed value is /var/spool/integria/data_in
+
+2013-08-19 Dario Rodriguez <dario@artica.es>
+
 	* integria_installer,
 	extras/tentacle_server,
 	extras/tentacle_serverd: Prepared scripts to add tentacle_server
